# dualsensectl

./: .gitignore  Makefile  README.md  crc32.h  main.c  meson.build
.github/workflows/: main.yml
completion/: _dualsensectl  dualsensectl
distribution/Arch Linux/dualsensectl/: PKGBUILD
distribution/Arch Linux/dualsensectl-git/: PKGBUILD
distribution/SUSE/dualsensectl/: dualsensectl.spec
